added additional styling to the button-frame and the answer-frame

--- a/style.css
+++ b/style.css
@@ -3,3 +3,22 @@
   ; font-siz: 1.75em
   ;
 }
+
+#stars-frame, #answer-frame {
+  width: 40%
+  ; float: left
+  ;
+}
+
+#button-frame {
+  width: 20%
+  ; float: left
+  ; text-align: center
+  ; margin-top: 50px
+  ;
+}
+
+#stars-frame .well, #answer-frame .well {
+  height: 150px
+  ;
+}
