--- a/style.css
+++ b/style.css
@@ -22,3 +22,14 @@
   height: 150px
   ;
 }
+
+#numbers-frame .number {
+  display: inline-block
+  ; margin: 0.5em
+  ; background-color: #bbb
+  ; width: 30px
+  ; text-align: center
+  ; font-size: 22px
+  ; border-radius: 50%
+  ;
+}
