created an initial state within the main Game component that takes the selected numbers and displays them in the answer frame.

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
   ;
 }
 
-#numbers-frame .number {
+#numbers-frame .number, #answer-frame .well span {
   display: inline-block
   ; margin: 0.5em
   ; background-color: #bbb
