corrected the numbers frame to make the selected numbers look different and be unclickable

--- a/style.css
+++ b/style.css
@@ -34,3 +34,10 @@
   ; cursor: pointer
   ;
 }
+
+#numbers-frame .selected-true {
+  background-color: #e8e8e8
+  ; color: #ddd
+  ; cursor: not-allowed
+  ;
+}
