added style to the used number to differentiate them, and wrote the acceptAnswer function with concat-ing the array of numbers and resetting the state

--- a/style.css
+++ b/style.css
@@ -41,3 +41,10 @@
   ; cursor: not-allowed
   ;
 }
+
+#numbers-frame .used-true {
+  backfround-color: #aaddaa
+  ; color: #99dd99
+  ; cursor: not-allowed
+  ;
+}
